[gd_scene load_steps=7 format=3 uid="uid://me0dik5yq140"]

[ext_resource type="Script" uid="uid://bmc6gk5nah53" path="res://SampleProject/Scripts/Menus/Game/options_component.gd" id="1_options_component"]
[ext_resource type="PackedScene" path="res://SampleProject/Scenes/Menus/Game/input_options_menu.tscn" id="5_input_menu"]

[sub_resource type="Shader" id="Shader_blur"]
code = "shader_type canvas_item;

uniform sampler2D screen_texture : hint_screen_texture;
uniform float blur_amount : hint_range(0.0, 10.0) = 4.0;

void fragment() {
	vec2 uv = SCREEN_UV;
	vec2 pixel_size = TEXTURE_PIXEL_SIZE;
	vec4 color = vec4(0.0);
	float total = 0.0;
	
	// Простий box blur
	float samples = blur_amount;
	
	for (float x = -samples; x <= samples; x += 1.0) {
		for (float y = -samples; y <= samples; y += 1.0) {
			vec2 offset = vec2(x, y) * pixel_size;
			color += texture(screen_texture, uv + offset);
			total += 1.0;
		}
	}
	
	COLOR = color / total;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_blur"]
shader = SubResource("Shader_blur")
shader_parameter/blur_amount = 4.0

[sub_resource type="FontFile" id="FontFile_hrfdy"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_bg"]
bg_color = Color(0.2, 0.2, 0.2, 0.6)

[node name="OptionsComponent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_options_component")

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
copy_mode = 1

[node name="BlurBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="DarkOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.3)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AudioSettings" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="AudioLabel" type="Label" parent="ScrollContainer/VBoxContainer/AudioSettings"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_hrfdy")
text = "Audio Settings"
horizontal_alignment = 1

[node name="MasterVolume" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/AudioSettings"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="ScrollContainer/VBoxContainer/AudioSettings/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume:"
vertical_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/AudioSettings/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="MasterVolumeValue" type="Label" parent="ScrollContainer/VBoxContainer/AudioSettings/MasterVolume"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MusicVolume" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/AudioSettings"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="ScrollContainer/VBoxContainer/AudioSettings/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume:"
vertical_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/AudioSettings/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.8

[node name="MusicVolumeValue" type="Label" parent="ScrollContainer/VBoxContainer/AudioSettings/MusicVolume"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "80%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SFXVolume" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/AudioSettings"]
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="ScrollContainer/VBoxContainer/AudioSettings/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX Volume:"
vertical_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/AudioSettings/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.9

[node name="SFXVolumeValue" type="Label" parent="ScrollContainer/VBoxContainer/AudioSettings/SFXVolume"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "90%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="GraphicsSettings" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="GraphicsLabel" type="Label" parent="ScrollContainer/VBoxContainer/GraphicsSettings"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_hrfdy")
text = "Graphics Settings"
horizontal_alignment = 1

[node name="Fullscreen" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/GraphicsSettings"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="ScrollContainer/VBoxContainer/GraphicsSettings/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fullscreen:"
vertical_alignment = 1

[node name="FullscreenCheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/GraphicsSettings/Fullscreen"]
layout_mode = 2

[node name="VSync" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/GraphicsSettings"]
layout_mode = 2

[node name="VSyncLabel" type="Label" parent="ScrollContainer/VBoxContainer/GraphicsSettings/VSync"]
layout_mode = 2
size_flags_horizontal = 3
text = "VSync:"
vertical_alignment = 1

[node name="VSyncCheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/GraphicsSettings/VSync"]
layout_mode = 2
button_pressed = true

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlsSettings" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="ScrollContainer/VBoxContainer/ControlsSettings"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_hrfdy")
text = "Controls"
horizontal_alignment = 1

[node name="InputOptionsMenu" parent="ScrollContainer/VBoxContainer/ControlsSettings" instance=ExtResource("5_input_menu")]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveSettings" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="ScrollContainer/VBoxContainer/SaveSettings"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_button_bg")
text = "Save Settings"

[node name="ResetButton" type="Button" parent="ScrollContainer/VBoxContainer/SaveSettings"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_button_bg")
text = "Reset to Default"

[node name="HSeparator4" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ExitToMainMenuContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ExitToMainMenuButton" type="Button" parent="ScrollContainer/VBoxContainer/ExitToMainMenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_button_bg")
text = "Exit to Main Menu"

[node name="BackButton" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(90, 30)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_button_bg")
text = "Back"

[connection signal="pressed" from="ScrollContainer/VBoxContainer/ExitToMainMenuContainer/ExitToMainMenuButton" to="." method="_on_exit_to_main_menu_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
